Fix flex box issues on Safari #2

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -284,6 +284,7 @@ textarea
 	width 100%
 	//border 1px solid red
 	display flex
+	display -webkit-box
 
 ::-webkit-input-placeholder
 	color #FFF	
